Added crossorigin attribute to the CDN link

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="gameBox">
         <div class="score">0-0</div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.3.1/lib/p5.js" crossorigin="anonymous"></script>
     <script src="./app.js"></script>
 </body>
 </html>
